content/_generated-doc/3.0/config/quarkus-quartz-quartz-build-time-config.adoc

:summaryTableId: quarkus-quartz-quartz-build-time-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-quartz-quartz-build-time-config_configuration]]link:#quarkus-quartz-quartz-build-time-config_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-quartz-quartz-build-time-config_quarkus.quartz.clustered]]`link:#quarkus-quartz-quartz-build-time-config_quarkus.quartz.clustered[quarkus.quartz.clustered]`

[.description]
--
Enable cluster mode or not. 
If enabled make sure to set the appropriate cluster properties.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_QUARTZ_CLUSTERED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_QUARTZ_CLUSTERED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-quartz-quartz-build-time-config_quarkus.quartz.cluster-checkin-interval]]`link:#quarkus-quartz-quartz-build-time-config_quarkus.quartz.cluster-checkin-interval[quarkus.quartz.cluster-checkin-interval]`

[.description]
--
The frequency (in milliseconds) at which the scheduler instance checks-in with other instances of the cluster.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_QUARTZ_CLUSTER_CHECKIN_INTERVAL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_QUARTZ_CLUSTER_CHECKIN_INTERVAL+++`
endif::add-copy-button-to-env-var[]
--|long 
|`15000`


a|icon:lock[title=Fixed at build time] [[quarkus-quartz-quartz-build-time-config_quarkus.quartz.store-type]]`link:#quarkus-quartz-quartz-build-time-config_quarkus.quartz.store-type[quarkus.quartz.store-type]`

[.description]
--
The type of store to use. 
When using `StoreType++#++JDBC_CMT` or `StoreType++#++JDBC_TX` configuration values make sure that you have the datasource configured. See link:https://quarkus.io/guides/datasource[Configuring your datasource] for more information. 
To create Quartz tables, you can perform a schema migration via the link:https://quarkus.io/guides/flyway[Flyway extension] using a SQL script matching your database picked from link:https://github.com/quartz-scheduler/quartz/blob/master/quartz-core/src/main/resources/org/quartz/impl/jdbcjobstore[Quartz repository].

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_QUARTZ_STORE_TYPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_QUARTZ_STORE_TYPE+++`
endif::add-copy-button-to-env-var[]
-- a|
`ram`, `jdbc-tx`, `jdbc-cmt` 
|`ram`


a|icon:lock[title=Fixed at build time] [[quarkus-quartz-quartz-build-time-config_quarkus.quartz.datasource]]`link:#quarkus-quartz-quartz-build-time-config_quarkus.quartz.datasource[quarkus.quartz.datasource]`

[.description]
--
The name of the datasource to use. 
Optionally needed when using the `jdbc-tx` or `jdbc-cmt` store types. If not specified, defaults to using the default datasource.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_QUARTZ_DATASOURCE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_QUARTZ_DATASOURCE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-quartz-quartz-build-time-config_quarkus.quartz.table-prefix]]`link:#quarkus-quartz-quartz-build-time-config_quarkus.quartz.table-prefix[quarkus.quartz.table-prefix]`

[.description]
--
The prefix for quartz job store tables. 
Ignored if using a `ram` store.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_QUARTZ_TABLE_PREFIX+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_QUARTZ_TABLE_PREFIX+++`
endif::add-copy-button-to-env-var[]
--|string 
|`QRTZ_`


a|icon:lock[title=Fixed at build time] [[quarkus-quartz-quartz-build-time-config_quarkus.quartz.select-with-lock-sql]]`link:#quarkus-quartz-quartz-build-time-config_quarkus.quartz.select-with-lock-sql[quarkus.quartz.select-with-lock-sql]`

[.description]
--
The SQL string that selects a row in the "LOCKS" table and places a lock on the row. 
If not set, the default value of Quartz applies, for which the "++{++0++}++" is replaced during run-time with the `table-prefix`, the "++{++1++}++" with the `instance-name`. 
An example SQL string `SELECT ++*++ FROM ++{++0++}++LOCKS WHERE SCHED_NAME = ++{++1++}++ AND LOCK_NAME = ? FOR UPDATE`

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_QUARTZ_SELECT_WITH_LOCK_SQL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_QUARTZ_SELECT_WITH_LOCK_SQL+++`
endif::add-copy-button-to-env-var[]
--|string 
|


h|[[quarkus-quartz-quartz-build-time-config_quarkus.quartz.instance-id-generators-instance-id-generators]]link:#quarkus-quartz-quartz-build-time-config_quarkus.quartz.instance-id-generators-instance-id-generators[Instance ID generators]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-quartz-quartz-build-time-config_quarkus.quartz.instance-id-generators.-generator-name-.class]]`link:#quarkus-quartz-quartz-build-time-config_quarkus.quartz.instance-id-generators.-generator-name-.class[quarkus.quartz.instance-id-generators."generator-name".class]`

[.description]
--
Class name for the configuration.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_QUARTZ_INSTANCE_ID_GENERATORS__GENERATOR_NAME__CLASS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_QUARTZ_INSTANCE_ID_GENERATORS__GENERATOR_NAME__CLASS+++`
endif::add-copy-button-to-env-var[]
--|string 
|required icon:exclamation-circle[title=Configuration property is required]


a|icon:lock[title=Fixed at build time] [[quarkus-quartz-quartz-build-time-config_quarkus.quartz.instance-id-generators.-generator-name-.properties-property-name]]`link:#quarkus-quartz-quartz-build-time-config_quarkus.quartz.instance-id-generators.-generator-name-.properties-property-name[quarkus.quartz.instance-id-generators."generator-name".properties]`

[.description]
--
The properties passed to the class.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_QUARTZ_INSTANCE_ID_GENERATORS__GENERATOR_NAME__PROPERTIES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_QUARTZ_INSTANCE_ID_GENERATORS__GENERATOR_NAME__PROPERTIES+++`
endif::add-copy-button-to-env-var[]
--|`Map<String,String>` 
|


h|[[quarkus-quartz-quartz-build-time-config_quarkus.quartz.trigger-listeners-trigger-listeners]]link:#quarkus-quartz-quartz-build-time-config_quarkus.quartz.trigger-listeners-trigger-listeners[Trigger listeners]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-quartz-quartz-build-time-config_quarkus.quartz.trigger-listeners.-listener-name-.class]]`link:#quarkus-quartz-quartz-build-time-config_quarkus.quartz.trigger-listeners.-listener-name-.class[quarkus.quartz.trigger-listeners."listener-name".class]`

[.description]
--
Class name for the configuration.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_QUARTZ_TRIGGER_LISTENERS__LISTENER_NAME__CLASS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_QUARTZ_TRIGGER_LISTENERS__LISTENER_NAME__CLASS+++`
endif::add-copy-button-to-env-var[]
--|string 
|required icon:exclamation-circle[title=Configuration property is required]


a|icon:lock[title=Fixed at build time] [[quarkus-quartz-quartz-build-time-config_quarkus.quartz.trigger-listeners.-listener-name-.properties-property-name]]`link:#quarkus-quartz-quartz-build-time-config_quarkus.quartz.trigger-listeners.-listener-name-.properties-property-name[quarkus.quartz.trigger-listeners."listener-name".properties]`

[.description]
--
The properties passed to the class.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_QUARTZ_TRIGGER_LISTENERS__LISTENER_NAME__PROPERTIES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_QUARTZ_TRIGGER_LISTENERS__LISTENER_NAME__PROPERTIES+++`
endif::add-copy-button-to-env-var[]
--|`Map<String,String>` 
|


h|[[quarkus-quartz-quartz-build-time-config_quarkus.quartz.job-listeners-job-listeners]]link:#quarkus-quartz-quartz-build-time-config_quarkus.quartz.job-listeners-job-listeners[Job listeners]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-quartz-quartz-build-time-config_quarkus.quartz.job-listeners.-listener-name-.class]]`link:#quarkus-quartz-quartz-build-time-config_quarkus.quartz.job-listeners.-listener-name-.class[quarkus.quartz.job-listeners."listener-name".class]`

[.description]
--
Class name for the configuration.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_QUARTZ_JOB_LISTENERS__LISTENER_NAME__CLASS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_QUARTZ_JOB_LISTENERS__LISTENER_NAME__CLASS+++`
endif::add-copy-button-to-env-var[]
--|string 
|required icon:exclamation-circle[title=Configuration property is required]


a|icon:lock[title=Fixed at build time] [[quarkus-quartz-quartz-build-time-config_quarkus.quartz.job-listeners.-listener-name-.properties-property-name]]`link:#quarkus-quartz-quartz-build-time-config_quarkus.quartz.job-listeners.-listener-name-.properties-property-name[quarkus.quartz.job-listeners."listener-name".properties]`

[.description]
--
The properties passed to the class.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_QUARTZ_JOB_LISTENERS__LISTENER_NAME__PROPERTIES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_QUARTZ_JOB_LISTENERS__LISTENER_NAME__PROPERTIES+++`
endif::add-copy-button-to-env-var[]
--|`Map<String,String>` 
|


h|[[quarkus-quartz-quartz-build-time-config_quarkus.quartz.plugins-plugins]]link:#quarkus-quartz-quartz-build-time-config_quarkus.quartz.plugins-plugins[Plugins]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-quartz-quartz-build-time-config_quarkus.quartz.plugins.-plugin-name-.class]]`link:#quarkus-quartz-quartz-build-time-config_quarkus.quartz.plugins.-plugin-name-.class[quarkus.quartz.plugins."plugin-name".class]`

[.description]
--
Class name for the configuration.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_QUARTZ_PLUGINS__PLUGIN_NAME__CLASS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_QUARTZ_PLUGINS__PLUGIN_NAME__CLASS+++`
endif::add-copy-button-to-env-var[]
--|string 
|required icon:exclamation-circle[title=Configuration property is required]


a|icon:lock[title=Fixed at build time] [[quarkus-quartz-quartz-build-time-config_quarkus.quartz.plugins.-plugin-name-.properties-property-name]]`link:#quarkus-quartz-quartz-build-time-config_quarkus.quartz.plugins.-plugin-name-.properties-property-name[quarkus.quartz.plugins."plugin-name".properties]`

[.description]
--
The properties passed to the class.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_QUARTZ_PLUGINS__PLUGIN_NAME__PROPERTIES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_QUARTZ_PLUGINS__PLUGIN_NAME__PROPERTIES+++`
endif::add-copy-button-to-env-var[]
--|`Map<String,String>` 
|

|===